package com.p3.code;

public interface Command {

    void execute();
    void undo();
}
