@startuml
interface Command {
 
  + execute(): void
  + undo():void
  
}
class CommandManager {
    - undoStack: List<Command>
    - redoStack: List<Command>
    + executeCommand(command: Command): void
    + undo(): void
    + redo(): void
}
class TaskManager{


    - task: List<Task>
    + addTask(task: Task): void
    + removeTask(task: Task): void
    + editTask(task: Task): void
    + completeTask(task: Task): void
}

class Task {
    - title: String
    - description: String
    - isCompleted: boolean
    - isDelete: boolean
    + getTitle(): String
    + setTitle(title: String): void
    + getDescription(): String
    + setDescription(description: String): void
    + isCompleted(): boolean
    + isDeleted(): boolean

}

class CreateTask implements Command {
-  TaskManager taskManager
- Task  task
 + constructor(taskManager: TaskManager, Task  task)
 + execute(): void 
+ undo():void


   
}

class EditTask implements Command {
   -  TaskManager taskManager
   - Task  task
   - Task previousState
    + constructor(taskManager: TaskManager, Task  task)
   + execute(): void 
   + undo():void
}


class DeleteTask implements Command  {
 -  TaskManager taskManager
 - Task  task
 - Task deletedTask
  + constructor(taskManager: TaskManager, Task  task)
 + execute(): void 
 + undo():void
}


class CompleteTask implements Command {
   -  TaskManager taskManager
   - Task  task
   - boolean previousCompletionState
    + constructor(taskManager: TaskManager, Task  task)
   + execute(): void 
   + undo():void
}
   
Task o-- TaskManager
TaskManager <|-- CreateTask
TaskManager <|-- EditTask
TaskManager <|-- DeleteTask
TaskManager <|-- CompleteTask
CommandManager <|-- Command

@enduml